--- a/app/src/main/res/layout/activity_flight_users.xml
+++ b/app/src/main/res/layout/activity_flight_users.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserFlightsActivity"
+    tools:context=".FlightUsersActivity"
     android:background="@drawable/mainbackground">
 
     <ScrollView
@@ -18,28 +18,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                android:text="Your flights:"
-                android:textColor="@color/white"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/userflights"
+                android:id="@+id/flightsUsers"
                 android:scrollbars="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="100dp"
-                app:layout_constraintTop_toBottomOf="@id/textView"/>
+                android:layout_marginTop="60dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
